compiler/test/fail_compilation/fix21165.d
/*
TEST_OUTPUT:
---
fail_compilation/fix21165.d(9): Error: undefined identifier `foo`
---
*/

// Test case from Issue #21165
foo
f() {}
